[package]
name = "wasm"
version = "0.1.0"
authors = ["Andy Miao <mya12321@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
md2 = "0.9"
md4 = "0.9"
md5 = "0.7.0"
